// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, with option 2`] = `
Array [
  Array [
    "account",
    80000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`commitPrice, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`commitPrice, without option 2`] = `
Array [
  Array [
    "account",
    80000,
    Object {},
  ],
]
`;

exports[`commitPrice, wrong env 1`] = `"Wrong Env"`;

exports[`getAddresses 1`] = `
Object {
  "operator": "operatorAddress",
  "priceFeed": Array [
    "priceFeed1",
    "priceFeed2",
    "priceFeed3",
  ],
  "roleManagerAddress": "roleManagerAddress",
}
`;

exports[`getLastPrice 1`] = `
Object {
  "price": 1e-16,
  "timestamp": 123456789000,
}
`;

exports[`getStates 1`] = `
Object {
  "firstPrice": Object {
    "price": 100,
    "source": "priceFeed1",
    "timestamp": 123456789000,
  },
  "isStarted": false,
  "lastOperationTime": 1234567890000,
  "numOfPrices": 0,
  "operationCoolDown": 1234567890000,
  "priceFeedTimeTolerance": 60000,
  "priceFeedTolerance": 0.01,
  "priceTolerance": 0.05,
  "priceUpdateCoolDown": 3600000,
  "secondPrice": Object {
    "price": 102,
    "source": "priceFeed2",
    "timestamp": 123456789000,
  },
}
`;

exports[`setValue 1`] = `"Read Only Mode"`;

exports[`setValue 2`] = `
Array [
  Array [
    0,
    100,
  ],
  Array [
    0,
    100,
  ],
]
`;

exports[`setValue 3`] = `
Array [
  Array [
    "account",
    50000,
    Object {},
  ],
  Array [
    "account",
    50000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startMagi, with option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, with option 2`] = `
Array [
  Array [
    "account",
    120000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`startMagi, without option 1`] = `
Array [
  Array [
    "100000000000000000000",
    123456789,
  ],
]
`;

exports[`startMagi, without option 2`] = `
Array [
  Array [
    "account",
    120000,
    Object {},
  ],
]
`;

exports[`startMagi, wrong env 1`] = `"Wrong Env"`;

exports[`updateOperator 1`] = `"Read Only Mode"`;

exports[`updateOperator 2`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updatePriceFeed 1`] = `"Read Only Mode"`;

exports[`updatePriceFeed 2`] = `
Array [
  Array [
    0,
  ],
  Array [
    0,
  ],
]
`;

exports[`updatePriceFeed 3`] = `
Array [
  Array [
    "account",
    120000,
    Object {},
  ],
  Array [
    "account",
    120000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;

exports[`updateRoleManager 1`] = `"Read Only Mode"`;

exports[`updateRoleManager 2`] = `
Array [
  Array [
    "newRoleManager",
  ],
  Array [
    "newRoleManager",
  ],
]
`;

exports[`updateRoleManager 3`] = `
Array [
  Array [
    "account",
    1000000,
    Object {},
  ],
  Array [
    "account",
    1000000,
    Object {
      "gasLimit": 200000,
      "gasPrice": 2000000000,
      "nonce": 10,
    },
  ],
]
`;
